--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-157.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇬🇧 英国-1.78MB/s(Youtube:不良林), server: 152.89.210.105, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇨🇳 中国-7.67MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.12MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-418.4KB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-473.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.93MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-480.6KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-4.32MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: 8d0db1d1-62a2-4d8b-b272-e4f364e064c6, sni: shcm.pdjc.cc, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-453.2KB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-317.8KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-4.64MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.58MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.37MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.23MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.28MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.19MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-814.9KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-157.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-814.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-157.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-814.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-157.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-814.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-814.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-157.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-814.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-157.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-814.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-157.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-814.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-157.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-480.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-453.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇭🇰 香港-814.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
