--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.32MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: 8d0db1d1-62a2-4d8b-b272-e4f364e064c6, sni: shcm.pdjc.cc, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-453.2KB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-317.8KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-4.64MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.58MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.37MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.23MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.28MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.19MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-814.9KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇧🇷 巴西-324.0KB/s(Youtube:不良林), server: 138.118.175.28, port: 31320, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-693.3KB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
+  - {name: 🇨🇳 中国-637.7KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-5.43MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.87MB/s(Youtube:不良林), server: gy.12.dog, port: 20511, type: ss, cipher: chacha20-ietf-poly1305, password: 7b561e94-42f3-4f92-979c-4cf97c328025}
+  - {name: 🇫🇷 法国-1.92MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-3.92MB/s(Youtube:不良林), server: sh.moonfree.top, port: 11263, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: sh.moonfree.top}}
+  - {name: 🇺🇸 美国-5.65MB/s(Youtube:不良林), server: x.uhwh.ga, port: 443, type: trojan, password: xianba2, sni: x.uhwh.ga, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.68MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.80MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-814.9KB/s(Youtube:不良林)
+      - 🇧🇷 巴西-324.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-693.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-637.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.87MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-814.9KB/s(Youtube:不良林)
+      - 🇧🇷 巴西-324.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-693.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-637.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.87MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-814.9KB/s(Youtube:不良林)
+      - 🇧🇷 巴西-324.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-693.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-637.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.87MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-814.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-814.9KB/s(Youtube:不良林)
+      - 🇧🇷 巴西-324.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-693.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-637.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.87MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-814.9KB/s(Youtube:不良林)
+      - 🇧🇷 巴西-324.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-693.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-637.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.87MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-814.9KB/s(Youtube:不良林)
+      - 🇧🇷 巴西-324.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-693.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-637.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.87MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-453.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇭🇰 香港-814.9KB/s(Youtube:不良林)
+      - 🇧🇷 巴西-324.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-693.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-637.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.87MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
