--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-1.46MB/s(Youtube:不良林), server: gy.12.dog, port: 20511, type: ss, cipher: chacha20-ietf-poly1305, password: 7b561e94-42f3-4f92-979c-4cf97c328025}
-  - {name: 🇨🇳 中国-412.2KB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
-  - {name: 🇷🇺 俄罗斯联邦-1.69MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-5.69MB/s(Youtube:不良林), server: x.uhwh.ga, port: 443, type: trojan, password: xianba2, sni: x.uhwh.ga, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-810.8KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-2.42MB/s(Youtube:不良林), server: xr-5.herokuapp.com, port: 443, type: vmess, uuid: 17af76e1-a5d7-41ab-ae87-b48f185075d1, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /17af76e1-a5d7-41ab-ae87-b48f185075d1-vmess, ws-headers: {Host: xr-5.herokuapp.com}}
-  - {name: 🇨🇳 中国-1005.5KB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: 8d0db1d1-62a2-4d8b-b272-e4f364e064c6, sni: shcm.pdjc.cc, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.11MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-391.3KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-203.3KB/s(Youtube:不良林), server: 14.29.124.174, port: 11013, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇩🇪 德国-3.24MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇺🇸 美国-434.7KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.52MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
+  - {name: 🇺🇸 美国-267.5KB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-810.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1005.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-434.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-810.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1005.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-434.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-810.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1005.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-434.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-810.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1005.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-434.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-810.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1005.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-434.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-810.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1005.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-434.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-810.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1005.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-434.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
